...
    return ChangeNotifierProvider(
      create: (context) => AuthenticationBloc(),
      child: Selector<AuthenticationBloc, UserDataVO?>(
          selector: (BuildContext context, bloc) => bloc.userData,
          builder: (BuildContext context, value, Widget? child) {
            return Scaffold(
              key: const ValueKey("home"),
              backgroundColor: Colors.white,
              body: Padding(
                padding: const EdgeInsets.only(
                  top: MARGIN_XXXLARGE,
                  left: MARGIN_MEDIUM_3,
                  right: MARGIN_MEDIUM_3,
...
            InputTextFormView(
              _emailController,
              _emailFocus,
              TextInputType.emailAddress,
              EMAIL_CONTROLLER_LABEL_TEXT,
              EMAIL_CONTROLLER_ERROR_TEXT,
              const ValueKey('input.email'),
            ),
            const SizedBox(
              height: MARGIN_MEDIUM_4,
            ),
            InputTextFormView(
              _passwordController,
              _passwordFocus,
              TextInputType.visiblePassword,
              PASSWORD_CONTROLLER_LABEL_TEXT,
              PASSWORD_CONTROLLER_ERROR_TEXT,
              const ValueKey('input.password'),
              obsureText: true,
            ),
            const SizedBox(
              height: MARGIN_MEDIUM_4,
            ),
            // SubText(
...
          ),
        ),
        const SizedBox(
          height: MARGIN_MEDIUM_4,
        ),
        GestureDetector(
          key: const ValueKey("confirm"),
          onTap: () => onTap(),
          child: AppTextButton(
            CONFIRM_BUTTON_TEXT,
            btnColor: THEME_COLOR[EnvironmentConfig.CONFIG_THEME_COLOR],
          ),
        ),
...
