...
            ),
          ),
        ),
        floatingActionButton: Builder(builder: (context) {
          SeatPlanBloc bloc = Provider.of(context, listen: false);
          return Padding(
            key: const ValueKey("buyTicket"),
            padding: const EdgeInsets.only(
              left: 30.0,
            ),
            child: GestureDetector(
              onTap: () {
                goToNextPage(context, bloc);
...
