...
                      height: 200.0,
                    ),
                  ],
                ),
              ),
              floatingActionButton: Padding(
                key: const ValueKey("pay"),
                padding: const EdgeInsets.only(
                  left: 30.0,
                ),
                child: GestureDetector(
                  onTap: () {
                    goToNextPage(context, bloc);
...
